--- a/waipio-camera-sensor-qrd.dtsi
+++ b/waipio-camera-sensor-qrd.dtsi
@@ -1,4 +1,5 @@
 #include <dt-bindings/clock/qcom,camcc-waipio.h>
+#include <dt-bindings/msm-camera.h>
 
 &soc {
 	led_flash_triple_rear: qcom,camera-flash@1 {
@@ -38,7 +39,7 @@
 	actuator_triple_uw: qcom,actuator0 {
 		cell-index = <0>;
 		compatible = "qcom,actuator";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		cam_vaf-supply = <&L7I>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
@@ -50,7 +51,7 @@
 	actuator_triple_tele: qcom,actuator1 {
 		cell-index = <1>;
 		compatible = "qcom,actuator";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		cam_vaf-supply = <&L7I>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
@@ -86,7 +87,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK0",
 					"CAM_RESET0";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -121,7 +122,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK1",
 					"CAM_RESET1";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK1_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -156,7 +157,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK3",
 					"CAM_RESET3";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		clocks = <&clock_camcc CAM_CC_MCLK3_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -196,7 +197,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK0",
 					"CAM_RESET0";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -238,7 +239,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK1",
 					"CAM_RESET1";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK1_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -280,7 +281,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK3",
 					"CAM_RESET3";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		clocks = <&clock_camcc CAM_CC_MCLK3_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -293,7 +294,7 @@
 	actuator_triple_wide: qcom,actuator2 {
 		cell-index = <2>;
 		compatible = "qcom,actuator";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		cam_vaf-supply = <&L7I>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
@@ -330,7 +331,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK2",
 					"CAM_RESET2";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK2_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -361,7 +362,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK6",
 			"CAM_RESET4";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK6_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -395,7 +396,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK5",
 					"CAM_RESET5";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK5_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -428,7 +429,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK4",
 					"CAM_RESET6";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		clocks = <&clock_camcc CAM_CC_MCLK4_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -471,7 +472,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK2",
 					"CAM_RESET2";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK2_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -507,7 +508,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK6",
 			"CAM_RESET4";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK6_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -547,7 +548,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK5",
 					"CAM_RESET5";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK5_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -588,7 +589,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK4",
 					"CAM_RESET6";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		clocks = <&clock_camcc CAM_CC_MCLK4_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
