--- a/waipio-camera-sensor-cdp.dtsi
+++ b/waipio-camera-sensor-cdp.dtsi
@@ -1,4 +1,5 @@
 #include <dt-bindings/clock/qcom,camcc-waipio.h>
+#include <dt-bindings/msm-camera.h>
 
 &soc {
 	led_flash_triple_rear: qcom,camera-flash@1 {
@@ -38,7 +39,7 @@
 	actuator_triple_uw: qcom,actuator0 {
 		cell-index = <0>;
 		compatible = "qcom,actuator";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		cam_vaf-supply = <&L7I>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
@@ -50,7 +51,7 @@
 	actuator_triple_tele: qcom,actuator1 {
 		cell-index = <1>;
 		compatible = "qcom,actuator";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		cam_vaf-supply = <&L7I>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
@@ -124,7 +125,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK0",
 					"CAM_RESET0";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -159,7 +160,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK0",
 					"CAM_RESET0";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -194,7 +195,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK1",
 					"CAM_RESET1";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK1_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -229,7 +230,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK3",
 					"CAM_RESET3";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		clocks = <&clock_camcc CAM_CC_MCLK3_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -341,7 +342,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK1",
 					"CAM_RESET1";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK1_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -383,7 +384,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK3",
 					"CAM_RESET3";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		clocks = <&clock_camcc CAM_CC_MCLK3_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -479,7 +480,7 @@
 	actuator_triple_wide: qcom,actuator2 {
 		cell-index = <2>;
 		compatible = "qcom,actuator";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		cam_vaf-supply = <&L7I>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
@@ -516,7 +517,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK2",
 					"CAM_RESET2";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK2_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -547,7 +548,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK6",
 			"CAM_RESET4";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK6_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -581,7 +582,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK5",
 					"CAM_RESET5";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK5_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -614,7 +615,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK4",
 					"CAM_RESET6";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		clocks = <&clock_camcc CAM_CC_MCLK4_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -657,7 +658,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK2",
 					"CAM_RESET2";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK2_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -693,7 +694,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK6",
 			"CAM_RESET4";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK6_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -733,7 +734,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK5",
 					"CAM_RESET5";
-		cci-master = <0>;
+		cci-master = <CCI_MASTER_0>;
 		clocks = <&clock_camcc CAM_CC_MCLK5_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
@@ -774,7 +775,7 @@
 		gpio-req-tbl-flags = <1 0>;
 		gpio-req-tbl-label = "CAMIF_MCLK4",
 					"CAM_RESET6";
-		cci-master = <1>;
+		cci-master = <CCI_MASTER_1>;
 		clocks = <&clock_camcc CAM_CC_MCLK4_CLK>;
 		clock-names = "cam_clk";
 		clock-cntl-level = "nominal";
