--- a/waipio-mmrm.dts
+++ b/waipio-mmrm.dts
@@ -7,8 +7,8 @@
 #include "waipio-mmrm.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. waipio v1 SoC";
+	model = "Qualcomm Technologies, Inc. waipio v1 & v2 SoC";
 	compatible = "qcom,waipio";
-	qcom,msm-id = <457 0x10000>, <482 0x10000>;
+	qcom,msm-id = <457 0x10000>, <482 0x10000>, <457 0x20000>, <482 0x20000>;
 	qcom,board-id = <0 0>; /* required by merge_dtbs.py */
 };
