ARM: dts: msm: Add WD register space for lx7 on Waipio
Add register space for WD timers for Tensilica node on Waipio.

CRs-Fixed: 2841729
Change-Id: Ie5232ae14f78d7c85a7244627728cfe6f6b29138

--- a/waipio-camera.dtsi
+++ b/waipio-camera.dtsi
@@ -2498,9 +2498,10 @@
 		cell-index = <0>;
 		compatible = "qcom,cam-lx7";
 		reg = <0xac01000 0x400>,
-			<0xac01800 0x400>;
-		reg-names = "lx7_csr", "lx7_cirq";
-		reg-cam-base = <0x1000 0x1800>;
+			<0xac01800 0x400>,
+			<0x0ac04000 0x1000>;
+		reg-names = "lx7_csr", "lx7_cirq", "lx7_wd0";
+		reg-cam-base = <0x1000 0x1800 0x4000>;
 		interrupt-names = "lx7";
 		interrupts = <GIC_SPI 463 IRQ_TYPE_EDGE_RISING>;
 		regulator-names = "gdsc";
