--- a/waipio-camera-sensor-mtp.dtsi
+++ b/waipio-camera-sensor-mtp.dtsi
@@ -199,6 +199,43 @@
 		status = "ok";
 	};
 
+	eeprom8: qcom,eeprom8 {
+		cell-index = <8>;
+		compatible = "qcom,eeprom";
+		csiphy-sd-index = <0>;
+		cam_vio-supply = <&L3J>;
+		cam_vdig-supply = <&L1J>;
+		cam_clk-supply = <&cam_cc_titan_top_gdsc>;
+		cam_vana-supply = <&L3I>;
+		cam_v_custom1-supply = <&L4J>;
+		cam_vaf-supply = <&L7I>;
+		regulator-names = "cam_vio", "cam_vdig",
+			"cam_clk", "cam_vana", "cam_v_custom1", "cam_vaf";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <1800000 1100000 0 2904000 1800000 2800000>;
+		rgltr-max-voltage = <1800000 1200000 0 2904000 1896000 3000000>;
+		rgltr-load-current = <11000 415200 0 40600 20400 103000>;
+		gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk0_active
+			&cam_sensor_active_rst0>;
+		pinctrl-1 = <&cam_sensor_mclk0_suspend
+			&cam_sensor_suspend_rst0>;
+		gpios = <&tlmm 100 0>,
+			<&tlmm 25 0>;
+		gpio-reset = <1>;
+		gpio-req-tbl-num = <0 1>;
+		gpio-req-tbl-flags = <1 0>;
+		gpio-req-tbl-label = "CAMIF_MCLK0",
+					"CAM_RESET0";
+		cci-master = <0>;
+		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "nominal";
+		clock-rates = <24000000>;
+		status = "ok";
+	};
+
 	qcom,cam-sensor0 {
 		cell-index = <7>;
 		compatible = "qcom,cam-sensor";
@@ -344,6 +381,48 @@
 		rgltr-min-voltage = <1800000 1000000 0 2800000 1704000>;
 		rgltr-max-voltage = <1800000 1200000 0 2800000 1896000>;
 		rgltr-load-current = <155000 872000 0 52000 88000>;
+		gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk0_active
+			&cam_sensor_active_rst0>;
+		pinctrl-1 = <&cam_sensor_mclk0_suspend
+			&cam_sensor_suspend_rst0>;
+		gpios = <&tlmm 100 0>,
+			<&tlmm 25 0>;
+		gpio-reset = <1>;
+		gpio-req-tbl-num = <0 1>;
+		gpio-req-tbl-flags = <1 0>;
+		gpio-req-tbl-label = "CAMIF_MCLK0",
+					"CAM_RESET0";
+		cci-master = <0>;
+		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "nominal";
+		clock-rates = <24000000>;
+		status = "ok";
+	};
+
+	qcom,cam-sensor8 {
+		cell-index = <8>;
+		compatible = "qcom,cam-sensor";
+		csiphy-sd-index = <0>;
+		actuator-src = <&actuator_triple_uw>;
+		led-flash-src = <&led_flash_triple_rear>;
+		eeprom-src = <&eeprom8>;
+		sensor-position-roll = <270>;
+		sensor-position-pitch = <0>;
+		sensor-position-yaw = <180>;
+		cam_vio-supply = <&L3J>;
+		cam_vdig-supply = <&L1J>;
+		cam_clk-supply = <&cam_cc_titan_top_gdsc>;
+		cam_vana-supply = <&L3I>;
+		cam_v_custom1-supply = <&L4J>;
+		regulator-names = "cam_vio", "cam_vdig",
+			"cam_clk", "cam_vana", "cam_v_custom1";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <1800000 1100000 0 2904000 1800000>;
+		rgltr-max-voltage = <1800000 1200000 0 2904000 1896000>;
+		rgltr-load-current = <11000 415200 0 40600 20400>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_active
