--- a/waipio-camera-sensor-mtp.dtsi
+++ b/waipio-camera-sensor-mtp.dtsi
@@ -59,6 +59,44 @@
 		rgltr-load-current = <103000>;
 	};
 
+	actuator_triple_ois: qcom,actuator2 {
+		cell-index = <9>;
+		compatible = "qcom,actuator";
+		cci-master = <0>;
+		cam_vaf-supply = <&L7I>;
+		regulator-names = "cam_vaf";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <3000000>;
+		rgltr-load-current = <103000>;
+	};
+
+	ois0: qcom,ois0 {
+		cell-index = <9>;
+		compatible = "qcom,ois";
+		cci-master = <0>;
+		cam_vaf-supply = <&L7I>;
+		cam_v_custom2-supply = <&L6I>;
+		cam_clk-supply = <&cam_cc_titan_top_gdsc>;
+		regulator-names = "cam_vaf", "cam_v_custom2", "cam_clk";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <2800000 2800000 0>;
+		rgltr-max-voltage = <3000000 2896000 0>;
+		rgltr-load-current = <103000 90000 0>;
+		gpios = <&tlmm 100 0>,
+			<&tlmm 25 0>;
+		gpio-reset = <1>;
+		gpio-req-tbl-num = <0 1>;
+		gpio-req-tbl-flags = <1 0>;
+		gpio-req-tbl-label = "CAMIF_MCLK0",
+					"CAM_RESET0";
+		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "nominal";
+		clock-rates = <24000000>;
+		status = "ok";
+	};
+
 	eeprom_tof1: qcom,eeprom0 {
 		cell-index = <0>;
 		compatible = "qcom,eeprom";
@@ -215,6 +253,37 @@
 		rgltr-min-voltage = <1800000 1100000 0 2904000 1800000 2800000>;
 		rgltr-max-voltage = <1800000 1200000 0 2904000 1896000 3000000>;
 		rgltr-load-current = <11000 415200 0 40600 20400 103000>;
+		gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk0_active
+			&cam_sensor_active_rst0>;
+		pinctrl-1 = <&cam_sensor_mclk0_suspend
+			&cam_sensor_suspend_rst0>;
+		gpios = <&tlmm 100 0>,
+			<&tlmm 25 0>;
+		gpio-reset = <1>;
+		gpio-req-tbl-num = <0 1>;
+		gpio-req-tbl-flags = <1 0>;
+		gpio-req-tbl-label = "CAMIF_MCLK0",
+					"CAM_RESET0";
+		cci-master = <0>;
+		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "nominal";
+		clock-rates = <24000000>;
+		status = "ok";
+	};
+
+	eeprom_ois: qcom,eeprom9 {
+		cell-index = <9>;
+		compatible = "qcom,eeprom";
+		cam_vio-supply = <&L3J>;
+		cam_clk-supply = <&cam_cc_titan_top_gdsc>;
+		regulator-names = "cam_vio","cam_clk";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <1800000 0>;
+		rgltr-max-voltage = <1800000 0>;
+		rgltr-load-current = <155000 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_active
@@ -423,6 +492,48 @@
 		rgltr-min-voltage = <1800000 1100000 0 2904000 1800000>;
 		rgltr-max-voltage = <1800000 1200000 0 2904000 1896000>;
 		rgltr-load-current = <11000 415200 0 40600 20400>;
+		gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk0_active
+			&cam_sensor_active_rst0>;
+		pinctrl-1 = <&cam_sensor_mclk0_suspend
+			&cam_sensor_suspend_rst0>;
+		gpios = <&tlmm 100 0>,
+			<&tlmm 25 0>;
+		gpio-reset = <1>;
+		gpio-req-tbl-num = <0 1>;
+		gpio-req-tbl-flags = <1 0>;
+		gpio-req-tbl-label = "CAMIF_MCLK0",
+					"CAM_RESET0";
+		cci-master = <0>;
+		clocks = <&clock_camcc CAM_CC_MCLK0_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "nominal";
+		clock-rates = <24000000>;
+		status = "ok";
+	};
+
+	qcom,cam-sensor9 {
+		cell-index = <9>;
+		compatible = "qcom,cam-sensor";
+		csiphy-sd-index = <0>;
+		eeprom-src = <&eeprom_ois>;
+		actuator-src = <&actuator_triple_ois>;
+		ois-src = <&ois0>;
+		sensor-position-roll = <90>;
+		sensor-position-pitch = <0>;
+		sensor-position-yaw = <180>;
+		cam_vio-supply = <&L3J>;
+		cam_vdig-supply = <&L1J>;
+		cam_vana-supply = <&L3I>;
+		cam_v_custom1-supply = <&L4J>;
+		cam_clk-supply = <&cam_cc_titan_top_gdsc>;
+		regulator-names = "cam_vio", "cam_vdig",
+			"cam_vana", "cam_v_custom1", "cam_clk";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <1800000 1050000 2900000 1800000 0>;
+		rgltr-max-voltage = <1800000 1200000 3000000 1896000 0>;
+		rgltr-load-current = <155000 872000 96000 88000 0>;
 		gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk0_active
