--- a/waipio-camera-sensor-cdp.dts
+++ b/waipio-camera-sensor-cdp.dts
@@ -11,6 +11,6 @@
 / {
 	model = "Qualcomm Technologies, Inc. Waipio CDP";
 	compatible = "qcom,waipio", "qcom,waipiop";
-	qcom,msm-id = <457 0x10000>, <482 0x10000>;
+	qcom,msm-id = <457 0x10000>, <482 0x10000>, <457 0x20000>, <482 0x20000>;
 	qcom,board-id = <0x10001 0>;
 };
