audio: dts: Add audio hw vote clock node in lpi
Add audio hw vote clock node in lpi device tree
in order to support digital clk resource manager
in waipio targets.

Change-Id: Ia0e628d49d22006824873de654ef980c148a6780

--- a/waipio-audio.dtsi
+++ b/waipio-audio.dtsi
@@ -93,8 +93,10 @@
 						<0x00000000>, <0x00000000>,
 						<0x00000000>;
 
-		clock-names = "lpass_core_hw_vote";
-		clocks = <&lpass_core_hw_vote 0>;
+		clock-names = "lpass_core_hw_vote",
+				"lpass_audio_hw_vote";
+		clocks = <&lpass_core_hw_vote 0>,
+				<&lpass_audio_hw_vote 0>;
 	};
 
 	lpass_cdc: lpass-cdc {
